Revert broken OpenRewrite refactorings